Webstack/k8s/project-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-webstack
  labels:
    name: project-webstack
    env: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    env: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    env: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
    env: development
