Webstack/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: project-webstack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # BELANGRIJK: veranderd!
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)    # Luistert naar alles wat met /api begint
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-service  # Matcht met je api.yaml
            port:
              number: 8000
      - path: /                # Alles wat GEEN /api is, gaat naar de frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
